# python-module-example

./: README.md  setup.cfg  setup.py
src/pyexample/: Calc.py
