[metadata]
name = example-pkg-rubeeengm
version = 0.0.1
author = Ruben Malaga
author_email = rubeeengm@outlook.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rubeeengm/python-module-example
project_urls =
    Bug Tracker = https://github.com/rubeeengm/python-module-example/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src